--- a/index.html
+++ b/index.html
@@ -154,29 +154,6 @@
         </section>
   
         <section class="section">
-          <div class="horizonLine" id="certifications">
-            CERTIFICATIONS
-          </div>
-          <div class="container1">
-            <div class="iconHug">
-            </div>
-            <div class="items">
-              <div class="item">
-                <div class="entity">
-                  <img loading="lazy" src="./images/EuropeanUnion.png">
-                  <div>
-                    <div class="what">Driving Licence, Credential ID Level B</div>
-                    <div class="where">European Union
-                      <span class="when">/ Issued July 2017</span>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </section>
-
-        <section class="section">
           <div class="horizonLine" id="experience&projects">
             EXPRERIENCE & PROJECTS
           </div>
@@ -287,6 +264,66 @@
             </div>
           </div>
         </section>
+
+        <section class="section">
+          <div class="horizonLine" id="RelevantCoursework">
+            Relevant coursework
+          </div>
+          <div class="container1">
+            <div class="iconHug">
+            </div>
+            <div class="items">
+              <div class="item">
+                <div class="entity">
+                  <img loading="lazy" src="">
+                  <div>
+                    <div class="what">Software development using covid data information.</div>
+                    <div class="where">Ionian University
+                      <span class="when">/ Issued July 2020</span>
+                    </div>
+                  </div>
+                </div>
+                <div class="desc3">
+                  Tech stack: PHP, HTML, CSS, javascript, MYSQL
+                </div>
+                <div class="desc4">
+                  I created a software application that demonstrate results about covid victims, confirmed cases and mortality in different countries.
+                  <ul>
+                    <li>HTML and CSS where used for the page site reconstruction.</li>
+                    <li>PHP where used for the connection between the server and the website.</li>
+                    <li>MYSQL where used in order to retrieve locally, data information from database.</li>
+                    <li>Javacript where used to be the webiste functional.</li>
+                  </ul>
+                </div>
+              </div>
+              <div class="item">
+                <div class="entity">
+                  <img loading="lazy" src="">
+                  <div>
+                    <div class="what">Software development using covid data information.</div>
+                    <div class="where">Ionian University
+                      <span class="when">/ Issued July 2020</span>
+                    </div>
+                  </div>
+                </div>
+                <div class="desc3">
+                  Tech stack: PHP, HTML, CSS, javascript, MYSQL
+                </div>
+                <div class="desc4">
+                  I created a software application that demonstrate results about covid victims, confirmed cases and mortality in different countries.
+                  <ul>
+                    <li>HTML and CSS where used for the page site reconstruction.</li>
+                    <li>PHP where used for the connection between the server and the website.</li>
+                    <li>MYSQL where used in order to retrieve locally, data information from database.</li>
+                    <li>Javacript where used to be the webiste functional.</li>
+                  </ul>
+                </div>
+              </div>
+
+            </div>
+          </div>
+        </section>
+
 
       </div>
 
