--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
                   <img loading="lazy" src="">
                   <div>
                     <div class="what">Software development using covid data information.</div>
-                    <div class="where">Ionian University
+                    <div class="where">Home project contributed by Ionian University
                       <span class="when">/ Issued July 2020</span>
                     </div>
                   </div>
@@ -300,23 +300,51 @@
                 <div class="entity">
                   <img loading="lazy" src="">
                   <div>
-                    <div class="what">Software development using covid data information.</div>
-                    <div class="where">Ionian University
-                      <span class="when">/ Issued July 2020</span>
+                    <div class="what">Pentesting & vulnerability assessment using kali linux.</div>
+                    <div class="where">Home project contributed by Ionian University
+                      <span class="when">/ Issued July 2021</span>
                     </div>
                   </div>
                 </div>
                 <div class="desc3">
-                  Tech stack: PHP, HTML, CSS, javascript, MYSQL
+                  Tech stack: Bash commands, javascript, PHP
                 </div>
                 <div class="desc4">
-                  I created a software application that demonstrate results about covid victims, confirmed cases and mortality in different countries.
+                  Working on projects that helped me practice my knowledge on cybersecurity attacks on locally boxes.
                   <ul>
-                    <li>HTML and CSS where used for the page site reconstruction.</li>
-                    <li>PHP where used for the connection between the server and the website.</li>
-                    <li>MYSQL where used in order to retrieve locally, data information from database.</li>
-                    <li>Javacript where used to be the webiste functional.</li>
+                    <li>The first one was blind sql injection - sql injection based on the answer that it will give the database from the response.</li>
+                    <li>The second one was</li>
+                    <li>The last one was xss attack using own malicious code with javascript.</li>
                   </ul>
+                </div>
+                <div class="desc5">
+                  All this projects built on vmware using kali linux so there is more familiarity with UNIX. 
+                </div>
+              </div>
+
+              <div class="item">
+                <div class="entity">
+                  <img loading="lazy" src="">
+                  <div>
+                    <div class="what">Eshop using Wordpress open source system.</div>
+                    <div class="where">Home project contributed by Ionian University
+                      <span class="when">/ Issued July 2021</span>
+                    </div>
+                  </div>
+                </div>
+                <div class="desc3">
+                  Tech stack: Wordpress tools
+                </div>
+                <div class="desc4">
+                  I create eshop locally that demonstrate how real eshops work using
+                  <ul>
+                    <li>The first one was blind sql injection - sql injection based on the answer that it will give the database from the response.</li>
+                    <li>The second one was</li>
+                    <li>The last one was xss attack using own malicious code with javascript.</li>
+                  </ul>
+                </div>
+                <div class="desc5">
+                  All this projects built on vmware using kali linux so there is more familiarity with UNIX. 
                 </div>
               </div>
 
