--- a/index.html
+++ b/index.html
@@ -336,21 +336,46 @@
                   Tech stack: Wordpress tools
                 </div>
                 <div class="desc4">
-                  I create eshop locally that demonstrate how real eshops work using
+                  I create eshop locally that demonstrate how real eshops work using lot of funtions and services that makes eshop friendly and resposive with the user. 
+                  The main idea was to build an eshop that hypothetically competes others like plasio, public and moreover. Tthe name of the eshop is TopSpot and each category has thirty prorducts
+                  with three photos in each product.
                   <ul>
-                    <li>The first one was blind sql injection - sql injection based on the answer that it will give the database from the response.</li>
-                    <li>The second one was</li>
-                    <li>The last one was xss attack using own malicious code with javascript.</li>
+                    <li>Included five main categories such as Desktop, Phone devices, consoles, wearables & accessories and peripherals devices</li>
+                    <li>Supported by two payment pethods such as credit card and paypal.</li>
+                    <li>It has different competitive methods like promoting similar porducts, display discounts that a porduct may has and offer to a new customers promo codes for discount. </li>
+                    <li>Built using friendly user interface and make it more simple for the users.</li>
                   </ul>
                 </div>
                 <div class="desc5">
-                  All this projects built on vmware using kali linux so there is more familiarity with UNIX. 
+                  The eshop build locally on localhost using XAMPP. In database was stored all of the products and with mysql commands i was able to retrieve to eshop.  
                 </div>
               </div>
-
             </div>
           </div>
         </section>
+
+        <section class="section">
+          <div class="horizonLine" id="Skills">
+            SKILLS</div>
+          <div class="container1">
+            <div class="iconHug">
+            </div>
+            <div class="items">
+              <div class="item">
+                <div class="entity">
+                  <img loading="lazy" src="">
+                  <div>
+                    <div class="what"></div>
+                    <div class="where">
+                      <span class="when"></span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+
 
 
       </div>
