--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
             <ul>
               <li>Bash</li>
               <li>PHP</li>
+              <li>MYSQL</li>
             </ul>
           </div>
 
@@ -336,7 +337,7 @@
                   Tech stack: Wordpress tools
                 </div>
                 <div class="desc4">
-                  I create eshop locally that demonstrate how real eshops work using lot of funtions and services that makes eshop friendly and resposive with the user. 
+                  Caption - I create eshop locally that demonstrate how real eshops work using lot of funtions and services that makes eshop friendly and resposive with the user. 
                   The main idea was to build an eshop that hypothetically competes others like plasio, public and moreover. Tthe name of the eshop is TopSpot and each category has thirty prorducts
                   with three photos in each product.
                   <ul>
@@ -355,8 +356,8 @@
         </section>
 
         <section class="section">
-          <div class="horizonLine" id="Skills">
-            SKILLS</div>
+          <div class="horizonLine" id="interestHobbies">
+            Interest and hobbies</div>
           <div class="container1">
             <div class="iconHug">
             </div>
@@ -365,9 +366,15 @@
                 <div class="entity">
                   <img loading="lazy" src="">
                   <div>
-                    <div class="what"></div>
-                    <div class="where">
-                      <span class="when"></span>
+                    <div class="desc6">
+                      <ul>
+                        <li>Going to gym.</li>
+                        <li>Watching movies.</li>
+                        <li>Carry out excursions.</li>
+                        <li>Listening music that either chilling me out either pump me out.</li>
+                        <li>Working on programming project for my own interest.</li>
+                        <li>Using hackthebox and tryhackme platforms to test my knowledge.</li>
+                      </ul>
                     </div>
                   </div>
                 </div>
