--- a/index.html
+++ b/index.html
@@ -212,6 +212,7 @@
                   Tech stack: Laravel Framework, Android Studio, Php, Java, SQL, XML, Json, RestFull Api
                 </div>
                 <div class="desc4">
+                  <span class="captiontag">Caption</span><br>
                   I created two software applications such as Android Application and Rest API that is responsible for the Authentication and verification of the user using unique Device number.
                   <ul>
                     <li>Friendly User Interface.</li>
@@ -236,6 +237,7 @@
                   Tech stack: HTML, CSS, javascript, SQL, PHP
                 </div>
                 <div class="desc4">
+                  <span class="captiontag">Caption</span><br>
                   Working on different projects for my own purpose and for the Ionian University. 
                   <ul>
                     <li>Familiarization with github environmnet.</li>
@@ -288,6 +290,7 @@
                   Tech stack: PHP, HTML, CSS, javascript, MYSQL
                 </div>
                 <div class="desc4">
+                  <span class="captiontag">Caption</span><br>
                   I created a software application that demonstrate results about covid victims, confirmed cases and mortality in different countries.
                   <ul>
                     <li>HTML and CSS where used for the page site reconstruction.</li>
@@ -311,6 +314,7 @@
                   Tech stack: Bash commands, javascript, PHP
                 </div>
                 <div class="desc4">
+                  <span class="captiontag">Caption</span><br>
                   Working on projects that helped me practice my knowledge on cybersecurity attacks on locally boxes.
                   <ul>
                     <li>The first one was blind sql injection - sql injection based on the answer that it will give the database from the response.</li>
@@ -337,7 +341,8 @@
                   Tech stack: Wordpress tools
                 </div>
                 <div class="desc4">
-                  Caption - I create eshop locally that demonstrate how real eshops work using lot of funtions and services that makes eshop friendly and resposive with the user. 
+                  <span class="captiontag">Caption</span><br>
+                  I create eshop locally that demonstrate how real eshops work using lot of funtions and services that makes eshop friendly and resposive with the user. 
                   The main idea was to build an eshop that hypothetically competes others like plasio, public and moreover. Tthe name of the eshop is TopSpot and each category has thirty prorducts
                   with three photos in each product.
                   <ul>
@@ -371,6 +376,7 @@
                         <li>Going to gym.</li>
                         <li>Watching movies.</li>
                         <li>Carry out excursions.</li>
+                        <li>Extreme sports.</li>
                         <li>Listening music that either chilling me out either pump me out.</li>
                         <li>Working on programming project for my own interest.</li>
                         <li>Using hackthebox and tryhackme platforms to test my knowledge.</li>
