--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
             <div class="items">
               <div class="item">
                 <div class="entity">
-                  <img loading="lazy" src="">
+                  <img loading="lazy" src="./images/virus logo.jpg">
                   <div>
                     <div class="what">Software development using covid data information.</div>
                     <div class="where">Home project contributed by Ionian University
@@ -302,7 +302,7 @@
               </div>
               <div class="item">
                 <div class="entity">
-                  <img loading="lazy" src="">
+                  <img loading="lazy" src="./images/pentesting.png">
                   <div>
                     <div class="what">Pentesting & vulnerability assessment using kali linux.</div>
                     <div class="where">Home project contributed by Ionian University
@@ -329,7 +329,7 @@
 
               <div class="item">
                 <div class="entity">
-                  <img loading="lazy" src="">
+                  <img loading="lazy" src="./images/TopSpot Logo.jpg">
                   <div>
                     <div class="what">Eshop using Wordpress open source system.</div>
                     <div class="where">Home project contributed by Ionian University
