--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
               </div>
               <div class="item">
                 <div class="entity">
-                  <img loading="lazy" src="./images/ltd.jpg">
+                  <img loading="lazy" src="./images/school logo.png">
                   <div>
                     <div class="what">High School Diploma, Education</div>
                     <div class="where">10st High School of Larisa, Thessaly
@@ -224,7 +224,7 @@
               </div>
               <div class="item">
                 <div class="entity">
-                  <img loading="lazy" src="./images/github.jpg">
+                  <img loading="lazy" src="./images/github.png">
                   <div>
                     <div class="what">Web developer</div>
                     <div class="where">
@@ -377,7 +377,7 @@
                         <li>Watching movies.</li>
                         <li>Carry out excursions.</li>
                         <li>Extreme sports.</li>
-                        <li>Listening music that either chilling me out either pump me out.</li>
+                        <li>Listening music.</li>
                         <li>Working on programming project for my own interest.</li>
                         <li>Using hackthebox and tryhackme platforms to test my knowledge.</li>
                       </ul>
