--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                   <img loading="lazy" src="./images/school logo.png">
                   <div>
                     <div class="what">High School Diploma, Education</div>
-                    <div class="where">10st High School of Larisa, Thessaly
+                    <div class="where">10th High School of Larisa, Thessaly
                       <span class="when">/ 2014 - 2017</span>
                     </div>
                   </div>
@@ -213,7 +213,7 @@
                 </div>
                 <div class="desc4">
                   <span class="captiontag">Caption</span><br>
-                  I created two software applications such as Android Application and Rest API that is responsible for the Authentication and verification of the user using unique Device number.
+                  I created two software applications, such as Android Application and Rest API, which are responsible for the authentication and verification of the user using unique Device number.
                   <ul>
                     <li>Friendly User Interface.</li>
                     <li>User Authentication with OTP number based on DeviceID.</li>
@@ -260,7 +260,8 @@
                   Tech stack: Wordpress, live host provider
                 </div>
                 <div class="desc4">
-                  Create a website that demonstrate the necessity that provides LPsecure android application for the user's data privacy and present the methodology that Sim Swapping attack has.
+                  <span class="captiontag">Caption</span><br>
+                  Created a website that demonstrates the necessity which is provided by LPsecure android application for the user's data privacy and present the methodology that Sim Swapping attack has.
                 </div>
               </div>
 
@@ -291,12 +292,12 @@
                 </div>
                 <div class="desc4">
                   <span class="captiontag">Caption</span><br>
-                  I created a software application that demonstrate results about covid victims, confirmed cases and mortality in different countries.
+                  I created a software application that demonstrates results about covid victims, confirmed cases and mortality in different countries.
                   <ul>
-                    <li>HTML and CSS where used for the page site reconstruction.</li>
-                    <li>PHP where used for the connection between the server and the website.</li>
-                    <li>MYSQL where used in order to retrieve locally, data information from database.</li>
-                    <li>Javacript where used to be the webiste functional.</li>
+                    <li>HTML and CSS were used for the page site reconstruction.</li>
+                    <li>PHP was used for the connection between the server and the website.</li>
+                    <li>MYSQL was used in order to retrieve local, data information from the database.</li>
+                    <li>Javacript was used for the website to be fuctional.</li>
                   </ul>
                 </div>
               </div>
@@ -315,7 +316,7 @@
                 </div>
                 <div class="desc4">
                   <span class="captiontag">Caption</span><br>
-                  Working on projects that helped me practice my knowledge on cybersecurity attacks on locally boxes.
+                  Working on projects that helped me practise my knowledge on cybersecurity attacks on local boxes.
                   <ul>
                     <li>The first one was blind sql injection - sql injection based on the answer that it will give the database from the response.</li>
                     <li>The second one was</li>
@@ -342,13 +343,13 @@
                 </div>
                 <div class="desc4">
                   <span class="captiontag">Caption</span><br>
-                  I create eshop locally that demonstrate how real eshops work using lot of funtions and services that makes eshop friendly and resposive with the user. 
-                  The main idea was to build an eshop that hypothetically competes others like plasio, public and moreover. Tthe name of the eshop is TopSpot and each category has thirty prorducts
+                  I created an eshop locally that demonstrates how real eshops work using a lot of funtions and services that make the eshop friendly and resposive to the user. 
+                  The main idea was to build an eshop that hypothetically competes others like plaisio, public and others. The name of the eshop is TopSpot and each category has thirty products
                   with three photos in each product.
                   <ul>
                     <li>Included five main categories such as Desktop, Phone devices, consoles, wearables & accessories and peripherals devices</li>
-                    <li>Supported by two payment pethods such as credit card and paypal.</li>
-                    <li>It has different competitive methods like promoting similar porducts, display discounts that a porduct may has and offer to a new customers promo codes for discount. </li>
+                    <li>Supported by two payment methods such as credit card and paypal.</li>
+                    <li>It has different competitive methods like promoting similar porducts, display discounts that a porduct may have and offers discount codes to the new customers.</li>
                     <li>Built using friendly user interface and make it more simple for the users.</li>
                   </ul>
                 </div>
@@ -373,11 +374,11 @@
                   <div>
                     <div class="desc6">
                       <ul>
-                        <li>Going to gym.</li>
+                        <li>Going to the gym.</li>
                         <li>Watching movies.</li>
-                        <li>Carry out excursions.</li>
+                        <li>Going on excursions.</li>
                         <li>Extreme sports.</li>
-                        <li>Listening music.</li>
+                        <li>Listening to music.</li>
                         <li>Working on programming project for my own interest.</li>
                         <li>Using hackthebox and tryhackme platforms to test my knowledge.</li>
                       </ul>
