--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
                   </ul>
                 </div>
                 <div class="desc5">
-                  All this projects built on vmware using kali linux so there is more familiarity with UNIX. 
+                  *All this projects built on vmware using kali linux so there is more familiarity with UNIX. 
                 </div>
               </div>
 
@@ -344,7 +344,7 @@
                 <div class="desc4">
                   <span class="captiontag">Caption</span><br>
                   I created an eshop locally that demonstrates how real eshops work using a lot of funtions and services that make the eshop friendly and resposive to the user. 
-                  The main idea was to build an eshop that hypothetically competes others like plaisio, public and others. The name of the eshop is TopSpot and each category has thirty products
+                  The main idea was to build an eshop that hypothetically competes others like plaisio and public. The name of the eshop is TopSpot and each category has thirty products
                   with three photos in each product.
                   <ul>
                     <li>Included five main categories such as Desktop, Phone devices, consoles, wearables & accessories and peripherals devices</li>
@@ -354,13 +354,72 @@
                   </ul>
                 </div>
                 <div class="desc5">
-                  The eshop build locally on localhost using XAMPP. In database was stored all of the products and with mysql commands i was able to retrieve to eshop.  
+                  *The eshop build locally on localhost using XAMPP. In database was stored all of the products and with mysql commands i was able to retrieve to eshop.  
                 </div>
               </div>
             </div>
           </div>
         </section>
 
+        <section class="section">
+          <div class="horizonLine" id="courses">
+            Courses</div>
+          <div class="container1">
+            <div class="iconHug">
+            </div>
+            <div class="items">
+              <div class="item">
+                <div class="entity">
+                  <img loading="lazy" src="">
+                  <div>
+                    <div class="what">Courses from programming platforms</div>
+                    <div class="where">Home project 
+                      <span class="when">/ 2020</span>
+                    </div>
+                  </div>
+                </div>
+                <div class="desc4">
+                  <span class="captiontag">Caption</span><br>
+                    Evolve my knowledge in programming languages, taking courses from popular platfroms like udemy, codeacademy, w3schools and tutorialspoint.
+                  <ul>
+                    <li>PHP</li>
+                    <li>Java</li>
+                    <li>Python</li>
+                  </ul>
+                </div>
+                <div class="desc5">
+                  *Trying to expertise code knowledge learning daily from online courses.
+                </div>
+              </div>
+              <div class="item">
+                <div class="entity">
+                  <img loading="lazy" src="">
+                  <div>
+                    <div class="what">Practise cyber security skills</div>
+                    <div class="where">Home project 
+                      <span class="when">/ 2020</span>
+                    </div>
+                  </div>
+                </div>
+                <div class="desc4">
+                  <span class="captiontag">Caption</span><br>
+                    Training cyber security using platforms like tryhackme and hackthebox. Learning from online platfroms like tutorialspoint and udemy.
+                    Gaining broad knowledge as bellow. 
+                  <ul>
+                    <li>Pentesting Fundamentals</li>
+                    <li>Web Hacking</li>
+                    <li>vulnerability Research</li>
+                  </ul>
+                </div>
+                <div class="desc5">
+                  *Keep learning more about cyber security and ethical hacking watching online courses.
+                </div>
+              </div>
+
+            </div>
+          </div>
+        </section>
+        
         <section class="section">
           <div class="horizonLine" id="interestHobbies">
             Interest and hobbies</div>
