--- a/index.html
+++ b/index.html
@@ -7,8 +7,12 @@
     <!-- This is the style for the header -->
     <link rel="stylesheet" href="assets/css/main.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" integrity="sha512-5A8nwdMOWrSz20fDsjczgUidUBR8liPYU+WymTZP1lmY9G6Oc7HlZv156XqnsgNUzTyMefFTcsFH/tnJE/+xBg==" crossorigin="anonymous" referrerpolicy="no-referrer" /></head>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+
 
 <body>
+
     <div class="container">
 
       <div class="left_Side">
@@ -17,7 +21,7 @@
             <img src="./images/ProfilePicture.jpg">
           </div>
           <h3>PROFILE</h3>
-          <i>My name is Lazaros Papanikolaou and i am a Graduate student from the Ionian University, Department of Information Technology.
+          <i>My name is Lazaros Papanikolaou and i am born at 1999. I am a graduate student from the Ionian University, Department of Information Technology.
              My experience of my graduate career hold 4 years and i was working on projects with software and application development. <br><br>The last 2 years of my graduation career i was specialized on the filed of information system.</i>
         </div>
         <div class="contactInfo">
@@ -73,6 +77,7 @@
               <li>Bash</li>
               <li>PHP</li>
               <li>MYSQL</li>
+              <li>Java</li>
             </ul>
           </div>
 
@@ -101,7 +106,16 @@
 
       <div class="right_Side">
 
-        
+        <div id="print" class="print icon" title="Get a pdf copy">
+          <i class="material-icons">&#xE8AD;</i>
+        </div>
+
+        <script type="text/javascript">
+          (function() {
+            document.getElementById("print").onclick = () => window.print();
+          })(); 
+        </script>
+
           <div class="title ">
             Lazaros Papanikolaou
             <div class="subtitle">
@@ -343,8 +357,8 @@
                 </div>
                 <div class="desc4">
                   <span class="captiontag">Caption</span><br>
-                  I created an eshop locally that demonstrates how real eshops work using a lot of funtions and services that make the eshop friendly and resposive to the user. 
-                  The main idea was to build an eshop that hypothetically competes others like plaisio and public. The name of the eshop is TopSpot and each category has thirty products
+                  I created an eshop locally that demonstrates how real eshops work using a lot of funtions and services that make the eshop friendly and resposive to the user.<br>
+                  The main idea was to build an eshop that hypothetically competes others like plaisio and public. The name of the eshop is TopSpot and each category has thirty<br>products
                   with three photos in each product.
                   <ul>
                     <li>Included five main categories such as Desktop, Phone devices, consoles, wearables & accessories and peripherals devices</li>
@@ -408,7 +422,7 @@
                   <ul>
                     <li>Pentesting Fundamentals</li>
                     <li>Web Hacking</li>
-                    <li>vulnerability Research</li>
+                    <li>Vulnerability Research</li>
                   </ul>
                 </div>
                 <div class="desc5">
