--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@
             <div class="items">
               <div class="item">
                 <div class="entity">
-                  <img loading="lazy" src="">
+                  <img loading="lazy" src="./images/courses.png">
                   <div>
                     <div class="what">Courses from programming platforms</div>
                     <div class="where">Home project 
@@ -407,7 +407,7 @@
               </div>
               <div class="item">
                 <div class="entity">
-                  <img loading="lazy" src="">
+                  <img loading="lazy" src="./images/courses.png">
                   <div>
                     <div class="what">Practise cyber security skills</div>
                     <div class="where">Home project 
@@ -443,7 +443,6 @@
             <div class="items">
               <div class="item">
                 <div class="entity">
-                  <img loading="lazy" src="">
                   <div>
                     <div class="desc6">
                       <ul>
