--- a/index.html
+++ b/index.html
@@ -110,11 +110,7 @@
           <i class="material-icons">&#xE8AD;</i>
         </div>
 
-        <script type="text/javascript">
-          (function() {
-            document.getElementById("print").onclick = () => window.print();
-          })(); 
-        </script>
+        <script src="./assets/scripts/pdf.js"></script>
 
           <div class="title ">
             Lazaros Papanikolaou
