--- a/index.html
+++ b/index.html
@@ -109,9 +109,6 @@
         <div id="print" class="print icon" title="Get a pdf copy">
           <i class="material-icons">&#xE8AD;</i>
         </div>
-
-        <script src="./assets/scripts/pdf.js"></script>
-
           <div class="title ">
             Lazaros Papanikolaou
             <div class="subtitle">
@@ -211,12 +208,7 @@
                     </div>  
                   </div>
 
-                  <script type="text/javascript">
-                    function toggle(){
-                      var videoContainer = document.querySelector(".videoContainer")
-                      videoContainer.classList.toggle("active")
-                    }
-                  </script>
+                  <script src="./assets/scripts/elements.js"></script>
 
                 <div class="desc3">
                   Tech stack: Laravel Framework, Android Studio, Php, Java, SQL, XML, Json, RestFull Api
@@ -464,5 +456,6 @@
 
     </div>    
 </body>
+<script src="./assets/scripts/pdf.js"></script>
 
 </html>
