--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
                 </div>
                 <div class="desc4">
                   <span class="captiontag">Caption</span><br>
-                  I created two software applications, such as Android Application and Rest API, which are responsible for the authentication and verification of the user using unique Device number.
+                  Pursuit of authentication and verification of the user using unique device number to validate the otp. For that i create an android application and an api that is responsible for the process.
                   <ul>
                     <li>Friendly User Interface.</li>
                     <li>User Authentication with OTP number based on DeviceID.</li>
@@ -318,8 +318,7 @@
                   Working on projects that helped me practise my knowledge on cybersecurity attacks on local boxes.
                   <ul>
                     <li>The first one was blind sql injection - sql injection based on the answer that it will give the database from the response.</li>
-                    <li>The second one was</li>
-                    <li>The last one was xss attack using own malicious code with javascript.</li>
+                    <li>The second one was xss attack using own malicious code with javascript.</li>
                   </ul>
                 </div>
                 <div class="desc5">
