--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <img src="./images/ProfilePicture.jpg">
           </div>
           <h3>PROFILE</h3>
-          <i>My name is Lazaros Papanikolaou and i am born at 1999. I am a graduate student from the Ionian University, Department of Information Technology.
+          <i>My name is Lazaros Papanikolaou and i am born in 1999 in Larisa of Greece. I am a graduate student from the Ionian University, Department of Information Technology.
              My experience of my graduate career hold 4 years and i was working on projects with software and application development. <br><br>The last 2 years of my graduation career i was specialized on the filed of information system.</i>
         </div>
         <div class="contactInfo">
