--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           </div>
           <h3>PROFILE</h3>
           <i>My name is Lazaros Papanikolaou and i am born in 1999 in Larisa of Greece. I am a graduate student from the Ionian University in Corfu, Department of Information Technology.
-             My experience of my graduate career hold 4 years and i was working on projects with software and application development. <br><br>The last 2 years of my graduation career i was specialized on the filed of information system.</i>
+             My experience of my graduate career hold 4 years and i was working on projects with software and application development. <br><br>The last 2 years of my graduation career i was specialized on the filed of information system working on pentesting projects and vulnerability assessment..</i>
         </div>
         <div class="contactInfo">
           <ul>
